--- a/docs/工程/部署说明.md
+++ b/docs/工程/部署说明.md
@@ -1,24 +1,20 @@
 # 前端 3.0 工程整体部署说明
 
-## 1. 安装说明
-
----
-
-### 1.1. 先决条件
+## 1. 先决条件
 
 - 向运维申请带 docker 环境的服务器
 
 ---
 
-### 1.2. 服务器
+## 2. 服务器
 
 - 版本：centos 7
 
 ---
 
-### 1.3. 部署
+## 3. 部署
 
-#### 1.3.1. 部署配置平台前端
+### 3.1. 部署配置平台前端
 
 进入虚拟机后，使用 root 用户操作，并开始创建必要的环境配置文件：
 
@@ -58,20 +54,18 @@ docker rm provider_app
 docker pull reg.hydevops.com/custom-platform-v3-frontend/provider-app-entry:release-main-flow
 
 # 4. 通过 docker 启动应用
-docker run -d --name provider_app -p 7070:80 -v /var/custom-platform-app/config/provider-app-config.json:/usr/share/nginx/html/config.json reg.hydevops.com/custom-platform-v3-frontend/provider-app-entry:release-main-flow
+docker run -d --name provider_app -p 5010:80 -v /var/custom-platform-app/config/provider-app-config.json:/usr/share/nginx/html/config.json reg.hydevops.com/custom-platform-v3-frontend/provider-app-entry:release-main-flow
 ```
 
-#### 1.3.2. 查看是否启动成功
+#### 3.1.1. 查看是否启动成功
 
 ```shell
-docker ps
+docker ps | grep provider_app
 ```
-
-查看是否有 `provider_app` 的名字的容器的应用。
 
 ---
 
-#### 1.3.3. 部署应用平台前端
+### 3.2. 部署应用平台前端
 
 进入虚拟机后，使用 root 用户操作，并开始创建必要的环境配置文件：
 
@@ -91,8 +85,9 @@ vi consumer-app-config.json
 
 ```json
 {
-  "pageServerUrlForApp": "http://192.168.14.181:5020", // 向 saas 发送请求的地址
-  "saasServerUrl": "http://192.168.14.181:7090" // 页面服务器的地址
+  "pageServerUrlForApp": "http://192.168.14.181:5020", // 向 saas 服务发送请求的地址
+  "saasServerUrl": "http://192.168.14.181:7090", // 页面服务器的地址
+  "currentApp": "zxx" // 指定启动的应用的编码，根据实际启动来
 }
 ```
 
@@ -106,23 +101,21 @@ docker stop consumer_app
 docker rm consumer_app
 
 # 3. 拉去最新的应用
-docker pull reg.hydevops.com/custom-platform-v3-frontend/consumer-app-entry:release-main-flow
+docker pull reg.hydevops.com/custom-platform-v3-frontend/consumer_app:release-main-flow
 
 # 4. 通过 docker 启动应用
-docker run -d --name consumer_app -p 5020:80 -v /var/custom-platform-app/config/consumer-app-config.json:/usr/share/consumer-app/web-client/config.json reg.hydevops.com/custom-platform-v3-frontend/consumer_app:release-main-flow
+docker run -d --name consumer_app -p 5020:3000 -v /var/custom-platform-app/config/consumer-app-config.json:/usr/share/consumer-app/web-client/config.json reg.hydevops.com/custom-platform-v3-frontend/consumer_app:release-main-flow
 ```
 
-#### 1.3.4. 查看是否启动成功
+#### 3.2.1. 查看是否启动成功
 
 ```shell
-docker ps
+docker ps | grep consumer_app
 ```
-
-查看是否有 `consumer_app` 的名字的容器的应用。
 
 ---
 
-#### 1.3.5. 部署 node web 服务器
+### 3.3. 部署 node web 服务器
 
 ```shell
 docker run -d -p 9090:80 reg.hydevops.com/custom-platform-v3-frontend/web-server:TAG
