--- a/docs/工程/应用部署说明.md
+++ b/docs/工程/应用部署说明.md
@@ -39,11 +39,15 @@ vi consumer-app-config.json
 
 _以下皆为必要配置，缺一不可_
 
+pageServerUrlForApp: 页面服务器的地址，写当前应用的服务地址即可，例如应用部署在 192.168.14.181，写 192.168.14.181 即可
+saasServerUrl: 向 saas 服务发送请求的地址
+currentApp: 指定启动的应用的编码，根据实际启动来
+
 ```json
 {
-  "pageServerUrlForApp": "http://192.168.14.181:5020", // 向 saas 服务发送请求的地址
-  "saasServerUrl": "http://192.168.14.181:7090", // 页面服务器的地址
-  "currentApp": "zxx" // 指定启动的应用的编码，根据实际启动来
+  "pageServerUrlForApp": "http://192.168.14.181:5020",
+  "saasServerUrl": "http://192.168.14.181:7090",
+  "currentApp": "zxx"
 }
 ```
 
