--- a/docs/接入平台组件和属性.md
+++ b/docs/接入平台组件和属性.md
@@ -265,6 +265,93 @@ export const widgetPanelData: GroupPanelData = {
 
 编辑 `packages/platform-widget-access-loader/services/prop-grouping.ts`
 
+```ts
+export const propItemGroupingData: GroupPanelData[] = [
+  {
+    title: '属性',
+    itemsGroups: [
+      {
+        title: '基本属性',
+        items: [
+          'prop_widget_coding',
+          'prop_title_value',
+          'prop_field',
+          'prop_real_value',
+          'prop_action_config',
+          'prop_datasource_selector',
+          'prop_widget_type',
+          'prop_data_type',
+          'prop_string_length',
+          'prop_prompt_info',
+          'prop_note_info',
+          'prop_start_search',
+          'prop_dropdown_multiple',
+
+        ]
+      },
+      {
+        title: '状态属性',
+        items: [
+        ]
+      },
+      {
+        title: '数字属性',
+        items: [
+          'prop_number_max',
+          'prop_number_min',
+          'prop_number_radixPoint'
+        ]
+      },
+      {
+        title: '控件校验',
+        items: [
+          'prop_check_fixed_rule',
+          'prop_check_custom_rule',
+          'prop_check_tooltip'
+        ]
+      },
+    ]
+  },
+  {
+    title: '样式',
+    itemsGroups: [
+      {
+        title: '样式属性',
+        items: [
+          'PropLabelColor',
+        ]
+      },
+    ]
+  },
+  {
+    title: '数据',
+    itemsGroups: [
+      {
+        title: '控件校验',
+        items: [
+        ]
+      },
+    ]
+  },
+];
+```
+
+### 8.3. 将组件和属性依赖关系注册到 loader 获取服务中
+
+编辑 `packages/platform-widget-access-loader/services/get-widget-rely-meta.ts`
+
+```ts
+import { WidgetTypeMetadataCollection } from "@engine/visual-editor/data-structure";
+import {
+  Widget, // 从这里导入
+} from "@platform-widget-access/prop-item-rely";
+import { ApiMock } from "./api-mock";
+
+const tempArr = [
+  Widget // 从这里导出
+];
+```
+
 ---
 
 ## 9. API
