docs: 完善接入文档

--- a/docs/接入平台组件和属性.md
+++ b/docs/接入平台组件和属性.md
@@ -8,7 +8,8 @@
 
 ## 2. 编写目的和范围
 
-1. 一份详细的平台组件接入到平台的规范说明
+1. 渐进式接入平台
+2. 了解平台的数据结构
 
 ---
 
@@ -22,14 +23,16 @@
 
 ## 4. 接入概览
 
-1. 创建平台组件工程
-   1. 定义组件的元数据描述
-   2. 定义可被编辑的属性
-2. 创建属性项工程
-   1. 定义属性项元数据描述
-   2. 编写属性项编辑的业务逻辑
+1. 平台组件接入
+   1. 创建平台组件工程
+   2. 定义组件的元数据描述
+   3. 定义可被编辑的属性
+2. 属性项接入
+   1. 创建属性项工程
+   2. 定义属性项元数据描述
+   3. 编写属性项编辑的业务逻辑
 3. 建立平台组件 - 属性项的关联关系
-4. 将元数据注册到对外提供的服务接口
+4. 将平台组件和属性项注册到对外提供的服务接口
    1. 将平台组件分组信息注册到组件面板
    2. 将属性项分组信息注册到属性项分组数据中
 
@@ -42,9 +45,11 @@
 
 ---
 
-## 5. 创建平台组件工程
+## 5. 平台组件接入
 
-临时工作目录： `packages/platform-widget-hub`。未来在基础框架成熟后，将在单独的工程中开发平台组件。
+### 5.1. 创建平台组件工程
+
+工作目录： `packages/platform-widget-hub`。__未来在基础框架成熟后，将在单独的工程中开发平台组件。__
 
 我们将平台组件当成一个完整的工程来看待，以下是平台组件工程包含的文件：
 
@@ -53,14 +58,14 @@
 3. `index.ts` 索引文件
 4. `其他.tsx` 可以编写任意的组件，交给 `spec.tsx` 使用
 
-### 5.1. package.json
+### 5.2. package.json
 
-可以根据实际情况填写，可以使用任意三方库，自由度很高
+可以根据实际情况编写，可以使用三方库，自由度较高，以下我们以`单行输入框 FormInput`为例子：
 
 ```json
 {
-  "name": "@platform-widget/dropdown-selector",
-  "description": "下拉组件",
+  "name": "@platform-widget/form-input",
+  "description": "表单单行输入框",
   "version": "0.0.1",
   "author": "xxx",
   "license": "MIT",
@@ -69,14 +74,14 @@
 }
 ```
 
-### 5.2. spec.tsx
+### 5.3. spec.tsx
 
-我们尝试了几种规范约束的方式，最终决定采用装饰器（decorator）的方式来约束、声明平台组件：
+我们将基于装饰器（decorator）的方式来约束接入到平台的组件：
 
 ```tsx
 import React from 'react';
-import { PlatformWidget, PlatformWidgetComp, WidgetEntityState } from '@platform-widget-access/spec';
-import { FormInputComp } from '.';
+import { PlatformWidget, PlatformWidgetComp, WidgetEntityState, WidgetActions } from '@platform-widget-access/spec';
+import { FormInputComp } from './comp';
 
 @PlatformWidget({
   name: 'FormInput',
@@ -101,7 +106,7 @@ export class FormInput implements PlatformWidgetComp {
     console.log('A');
   }
 
-  render(widgetState: WidgetEntityState) {
+  render(widgetState: WidgetEntityState, widgetActions: WidgetActions) {
     return (
       <FormInputComp {...widgetState} />
     );
@@ -109,25 +114,70 @@ export class FormInput implements PlatformWidgetComp {
 }
 ```
 
-`@spec/platform-widget-access` 是内部的库，提供平台组件接入的规范，拥有基本约束、组件元数据声明等检查函数。
+`@spec/platform-widget-access` 提供平台组件接入的规范，拥有基本约束、组件元数据声明等检查函数。
 
-### 5.3. index.ts
+### 5.4. comp.tsx
 
-这是一份简单的索引文件：
+这是约定的组件入口，编写真正的 react 组件
+
+```tsx
+/**
+ * 在 form 表单中有标题的 Input 组件
+ */
+import React from 'react';
+import { Input } from 'antd';
+
+/**
+ * FormInput 必须的 props
+ */
+export interface FormInputCompProps {
+  title: string
+  /** 默认值 */
+  realVal: string
+  labelColor: string
+}
+
+export const FormInputComp: React.FC<FormInputCompProps> = (props) => {
+  const {
+    title,
+    labelColor,
+    realVal,
+  } = props;
+
+  return (
+    <div>
+      <div
+        style={{
+          color: labelColor
+        }}
+      >
+        {title}
+      </div>
+      <Input value={realVal} style={{ width: 300 }} />
+    </div>
+  );
+};
+```
+
+### 5.5. index.ts
+
+添加索引文件：
 
 ```ts
 export * from './spec.tsx'
 ```
 
-### 5.4. 其他组件
+### 5.6. 其他
 
-可以根据实际情况，根据具体业务编写业务组件
+可以根据实际情况，将 `comp.tsx` 中的组件切割为多个组件
 
 ---
 
-## 6. 创建属性项工程
+## 6. 属性项接入
 
-临时工作目录： `packages/platform-widget-prop-item-hub`。未来在基础框架成熟后，将在单独的工程中开发属性项。
+### 6.1. 创建属性项工程
+
+工作目录： `packages/platform-widget-prop-item-hub`。__未来在基础框架成熟后，将在单独的工程中开发属性项。__
 
 同样的，我们将属性项也当成一个完整的工程来看待，以下是属性项工程包含的文件：
 
@@ -136,14 +186,14 @@ export * from './spec.tsx'
 3. `index.ts` 索引文件
 4. `其他.tsx` 可以编写任意的组件，交给 `spec.tsx` 使用
 
-### 6.1. package.json
+### 6.2. package.json
 
-可以根据实际情况填写，可以使用任意三方库，自由度很高
+可以根据实际情况填写，可以ay依赖三方库，自由度较高，以下以`标题 Title`为例：
 
 ```json
 {
-  "name": "@platform-widget/dropdown-selector",
-  "description": "下拉组件",
+  "name": "@platform-widget-prop-item/title-helper",
+  "description": "标题属性编辑",
   "version": "0.0.1",
   "author": "xxx",
   "license": "MIT",
@@ -152,15 +202,12 @@ export * from './spec.tsx'
 }
 ```
 
-### 6.2. spec.tsx
+### 6.3. spec.tsx
 
 ```tsx
-import React from 'react';
+import React, { useEffect } from 'react';
 import { PropItem, PropItemRenderContext } from '@platform-widget-access/spec';
 import { TitleEditorComp } from './comp';
-
-/** 属性项编辑的组件属性 */
-const whichAttr = 'title';
 
 @PropItem({
   id: 'prop_title_value',
@@ -173,18 +220,70 @@ const whichAttr = 'title';
 })
 export class TitleHelperSpec {
   render(ctx: PropItemRenderContext) {
+    const { takeMeta, changeWidgetType } = ctx.platformCtx.meta;
     return (
-      <TitleEditorComp {...ctx} />
+      <TitleEditorComp {...ctx} takeMeta={takeMeta} />
     );
   }
 }
+```
+
+### comp.tsx
+
+```tsx
+import React, { useEffect } from 'react';
+import { Input } from '@infra/ui';
+import { PropItemRenderContext } from '@platform-widget-access/spec';
+
+export const TitleEditorComp: React.FC<PropItemRenderContext> = ({
+  changeEntityState,
+  editingWidgetState,
+  platformCtx: {
+    meta: {
+      takeMeta
+    }
+  }
+}) => {
+  const { title, field } = editingWidgetState;
+  const selectedField = takeMeta({
+    metaAttr: 'schema',
+    metaRefID: field
+  });
+  useEffect(() => {
+    const nextTitle = selectedField?.column?.name;
+    if (!nextTitle || nextTitle === title) return;
+    changeEntityState({
+      attr: 'title',
+      value: nextTitle
+    });
+  }, [field]);
+  return (
+    <div>
+      <Input
+        value={title || ''}
+        onChange={(value) => changeEntityState({
+          attr: 'title',
+          value
+        })}
+      />
+    </div>
+  );
+};
+```
+
+### index.ts
+
+索引文件
+
+```tsx
+export * from './spec';
 ```
 
 ---
 
 ## 7. 建立平台组件 - 属性项的关联关系
 
-临时工作目录： `packages/platform-widget-access-prop-rely`。
+工作目录： `packages/platform-widget-access-prop-rely`。
 
 ```tsx
 import { CreateWidgetPropItemRely } from "@platform-widget-access/spec";
@@ -215,7 +314,7 @@ export const DropdownSelectorMeta = CreateWidgetPropItemRely({
 
 ## 8. 将元数据注册到对外提供的服务接口
 
-临时工作目录： `packages/platform-widget-access-loader`。
+工作目录： `packages/platform-widget-access-loader`。
 
 分别在以下引用文件注册：
 
@@ -354,7 +453,55 @@ const tempArr = [
 
 ---
 
-## 9. API
+## 9. 页面数据结构和 API
+
+| 术语 | 解释 |
+|---|---|
+| 页面数据结构 | 页面设计器设计页面最终产出的数据结构，用于存储组件、变量、业务关系描述等，以 json 的形式存储 |
+| 平台 API | 提供修改平台数据能力的接口 |
+
+### 页面设计器的页面数据结构
+
+概览：
+
+```ts
+const pageContent = {
+  // 存储页面内容
+  content: [],
+  // 该页面的 id
+  id: string,
+  // 页面元数据描述，用于存储业务逻辑引用关系的数据节点
+  meta: {},
+  // 页面的名称
+  name: string,
+  // 页面 id，暂时无用
+  pageID: string
+}
+```
+
+#### content
+
+页面内容，用于描述页面如何布局，每个 widget 节点
+
+#### meta
+
+TODO
+
+```tsx
+meta = {
+  varRely: {
+
+  },
+  dataSource: {
+
+  },
+  actions: {
+
+  },
+}
+```
+
+### API
 
 `@platform-widget-access/spec` 提供核心的接入规范，提供以下几种能力：
 
@@ -363,5 +510,10 @@ const tempArr = [
 3. 更新组件状态的接口
 4. 更新页面元数据的接口
 5. 页面设计器提供的 UI 上下文
+
+```ts
+import { PlatformCtx } from "@platform-widget-access/spec";
+
+```
 
 ---
