docs: 完善接入文档

--- a/docs/接入平台组件和属性.md
+++ b/docs/接入平台组件和属性.md
@@ -18,6 +18,7 @@
 | 术语 | 解释 |
 |---|---|
 | 平台组件 | 接入整个平台的组件，只需要接入一次，即可在配置端和应用端使用 |
+| 平台 | 指整个平台，从配置到应用的全生命周期 |
 
 ---
 
@@ -42,6 +43,28 @@
 
 - platform-widget-* 组件开发相关
 - platform-widget-access-* 组件接入平台相关
+
+### 4.2. 样式框架影响
+
+接入平台的组件将运行在平台之中，所以也将会收到平台的样式框架的影响，以下为样式框架的依赖：
+
+1. tailwind.css 最基本的样式框架，不依赖任何组件，作为平台基本的样式支持
+2. antd 以后考虑替换方案替换该 UI 库
+3. deer-ui 以后考虑替换方案替换该 UI 库
+
+### 4.3. UI 框架影响
+
+1. 平台提供基础的 UI 隔离架构 `@infra/ui`，其中包含通用的基础组件可以选择
+2. 可以由接入的自身决定使用什么 UI 框架，在可控的范围内放开技术选型，后续再做技术收敛
+
+### 平台提供的能力
+
+页面设计器主要是提供两个核心功能：
+
+1. 提供一份描述页面布局、业务逻辑的数据结构
+2. 提供更改页面数据结构的能力、接口
+
+所以，组件在配置平台中，，属性项的
 
 ---
 
@@ -228,7 +251,7 @@ export class TitleHelperSpec {
 }
 ```
 
-### comp.tsx
+### 6.4. comp.tsx
 
 ```tsx
 import React, { useEffect } from 'react';
@@ -271,7 +294,7 @@ export const TitleEditorComp: React.FC<PropItemRenderContext> = ({
 };
 ```
 
-### index.ts
+### 6.5. index.ts
 
 索引文件
 
@@ -460,7 +483,7 @@ const tempArr = [
 | 页面数据结构 | 页面设计器设计页面最终产出的数据结构，用于存储组件、变量、业务关系描述等，以 json 的形式存储 |
 | 平台 API | 提供修改平台数据能力的接口 |
 
-### 页面设计器的页面数据结构
+### 9.1. 页面设计器的页面数据结构
 
 概览：
 
@@ -479,11 +502,11 @@ const pageContent = {
 }
 ```
 
-#### content
+#### 9.1.1. content
 
 页面内容，用于描述页面如何布局，每个 widget 节点
 
-#### meta
+#### 9.1.2. meta
 
 TODO
 
@@ -501,7 +524,7 @@ meta = {
 }
 ```
 
-### API
+### 9.2. API
 
 `@platform-widget-access/spec` 提供核心的接入规范，提供以下几种能力：
 
