docs: update doc

--- a/docs/平台组件接入规则.md
+++ b/docs/平台组件接入规则.md
@@ -4,7 +4,8 @@
 
 | 作者 | 更新日期 | 版本 | 更改内容 |
 |---|---|---|---|
-| 相杰 | 2020-11-16 | v1 | 初稿 |
+| 相杰 | 2020-11-16 | v1.0.0 | 初稿 |
+| 相杰 | 2020-11-29 | v1.1.0 | 1. 完善平台组件接入的描述<br>2. 添加对于页面数据的描述<br> |
 
 ## 2. 编写目的和范围
 
@@ -22,7 +23,49 @@
 
 ---
 
-## 4. 接入概览
+## 4. 知识
+
+### 4.1. 工程目录
+
+在工程中，以下前缀的包对应不同的能力：
+
+- `packages/`
+  - `platform-widget-access-spec` 平台接入标准，提供 `SDK` 和 `interface`。
+  - `platform-widget-hub` 平台组件开发的工作区。
+  - `platform-widget-prop-item-hub` 属性项开发的工作区。
+  - `platform-widget-access-loader` 平台组件 `loader`，用于加载组件数据的 `API`。
+  - `platform-widget-access-prop-rely` 平台组件与属性项的依赖关系，只在`配置端`使用，`应用端`不需要。
+  - `platform-widget-custom-editor-hub` 自定义的平台组件的属性编辑器，当遇到难以扩展的属性项编辑时，预留扩展的。
+
+### 4.2. 平台的影响
+
+由于平台组件运行在两个环境，分别是 `配置端` 和 `应用端`，开发组件时需要结合实际业务，根据由外部传入的`平台上下文（组件运行环境，配置端或者应用端）`进行渲染和交互。
+
+同时会受到以下方面的影响：
+
+#### 4.2.1. 样式框架影响
+
+接入平台的组件将运行在平台之中，所以也将会收到平台的样式框架的影响，以下为样式框架的依赖：
+
+1. `tailwind.css` 最基本的样式框架，不依赖任何组件，作为平台基本的样式支持
+2. `antd` 以后考虑替换方案替换该 UI 库
+3. `deer-ui` 以后考虑替换方案替换该 UI 库
+
+#### 4.2.2. UI 框架影响
+
+1. 平台提供基础的 UI 隔离架构 `@infra/ui`，其中包含通用的基础组件可以选择
+2. 可以由接入的自身决定使用什么 UI 框架，在可控的范围内放开技术选型，后续再做技术收敛
+
+### 4.3. 平台提供的能力
+
+页面设计器主要是提供两个核心功能：
+
+1. 提供一份描述页面布局、业务逻辑的数据结构
+2. 提供更改页面数据结构的 API
+
+---
+
+### 5.1. 平台组件 & 属性项的接入概览
 
 1. 平台组件接入
    1. 创建平台组件工程
@@ -37,40 +80,13 @@
    1. 将平台组件分组信息注册到组件面板
    2. 将属性项分组信息注册到属性项分组数据中
 
-### 4.1. 依赖包
-
-在工程中，以下前缀的包对应不同的能力：
-
-- platform-widget-* 组件开发相关
-- platform-widget-access-* 组件接入平台相关
-
-### 4.2. 样式框架影响
-
-接入平台的组件将运行在平台之中，所以也将会收到平台的样式框架的影响，以下为样式框架的依赖：
-
-1. tailwind.css 最基本的样式框架，不依赖任何组件，作为平台基本的样式支持
-2. antd 以后考虑替换方案替换该 UI 库
-3. deer-ui 以后考虑替换方案替换该 UI 库
-
-### 4.3. UI 框架影响
-
-1. 平台提供基础的 UI 隔离架构 `@infra/ui`，其中包含通用的基础组件可以选择
-2. 可以由接入的自身决定使用什么 UI 框架，在可控的范围内放开技术选型，后续再做技术收敛
-
-### 平台提供的能力
-
-页面设计器主要是提供两个核心功能：
-
-1. 提供一份描述页面布局、业务逻辑的数据结构
-2. 提供更改页面数据结构的能力、接口
-
-所以，组件在配置平台中，，属性项的
+> 准备就绪，即将开始
 
 ---
 
 ## 5. 平台组件接入
 
-### 5.1. 创建平台组件工程
+### 5.2. 创建平台组件工程
 
 工作目录： `packages/platform-widget-hub`。__未来在基础框架成熟后，将在单独的工程中开发平台组件。__
 
@@ -81,7 +97,7 @@
 3. `index.ts` 索引文件
 4. `其他.tsx` 可以编写任意的组件，交给 `spec.tsx` 使用
 
-### 5.2. package.json
+### 5.3. package.json
 
 可以根据实际情况编写，可以使用三方库，自由度较高，以下我们以`单行输入框 FormInput`为例子：
 
@@ -97,7 +113,7 @@
 }
 ```
 
-### 5.3. spec.tsx
+### 5.4. spec.tsx
 
 我们将基于装饰器（decorator）的方式来约束接入到平台的组件：
 
@@ -139,7 +155,7 @@ export class FormInput implements PlatformWidgetComp {
 
 `@spec/platform-widget-access` 提供平台组件接入的规范，拥有基本约束、组件元数据声明等检查函数。
 
-### 5.4. comp.tsx
+### 5.5. comp.tsx
 
 这是约定的组件入口，编写真正的 react 组件
 
@@ -182,7 +198,7 @@ export const FormInputComp: React.FC<FormInputCompProps> = (props) => {
 };
 ```
 
-### 5.5. index.ts
+### 5.6. index.ts
 
 添加索引文件：
 
@@ -190,7 +206,7 @@ export const FormInputComp: React.FC<FormInputCompProps> = (props) => {
 export * from './spec.tsx'
 ```
 
-### 5.6. 其他
+### 5.7. 其他
 
 可以根据实际情况，将 `comp.tsx` 中的组件切割为多个组件
 
@@ -524,19 +540,42 @@ meta = {
 }
 ```
 
-### 9.2. API
+### 9.2. 平台提供的 SDK
 
 `@platform-widget-access/spec` 提供核心的接入规范，提供以下几种能力：
 
-1. 组件约定
-2. 获取组件实例状态
-3. 更新组件状态的接口
-4. 更新页面元数据的接口
-5. 页面设计器提供的 UI 上下文
+1. 组件接入：
+   1. `PlatformWidget(meta)`
+2. 属性项接入
+   1. `PropItem(meta)`
+3. 创建组件与属性项的依赖关系
+   1. `CreateWidgetPropItemRely()`
 
 ```ts
-import { PlatformCtx } from "@platform-widget-access/spec";
-
+import {
+  CreateWidgetPropItemRely,
+  PlatformWidget,
+  PropItem,
+} from "@platform-widget-access/spec";
+// 具体用法参考 5～8 述章节
 ```
+
+在属性项的 `render` 函数中，平台提供了 `platformCtx` ，可以允许属性项调用平台的修改页面数据的能力：
+
+```tsx
+@PropItem({
+  ...
+})
+export class TitleHelperSpec {
+  render(ctx: PropItemRenderContext) {
+    const { takeMeta, changeWidgetType } = ctx.platformCtx.meta;
+    return (
+      ...
+    )
+  }
+}
+```
+
+[详情参考定义](../packages/provider-app-pages-hub/PageDesigner/platform-access/platform-ctx-types.ts)
 
 ---
