docs: 完善文档的编写

--- a/docs/平台组件接入规则.md
+++ b/docs/平台组件接入规则.md
@@ -6,6 +6,7 @@
 |---|---|---|---|
 | 相杰 | 2020-11-16 | v1.0.0 | 初稿 |
 | 相杰 | 2020-11-29 | v1.1.0 | 1. 完善平台组件接入的描述<br>2. 添加对于页面数据的描述<br> |
+| 相杰 | 2020-11-30 | v1.1.1 | 1. 完善文档描述 |
 
 ## 2. 编写目的和范围
 
@@ -65,12 +66,12 @@
 
 ---
 
-### 5.1. 平台组件 & 属性项的接入概览
+### 4.4. 平台组件 & 属性项的接入概览
 
 1. 平台组件接入
    1. 创建平台组件工程
    2. 定义组件的元数据描述
-   3. 定义可被编辑的属性
+   3. 创建组件 (widget)
 2. 属性项接入
    1. 创建属性项工程
    2. 定义属性项元数据描述
@@ -79,6 +80,7 @@
 4. 将平台组件和属性项注册到对外提供的服务接口
    1. 将平台组件分组信息注册到组件面板
    2. 将属性项分组信息注册到属性项分组数据中
+   3. 将组件和属性依赖关系注册到 loader 获取服务中
 
 > 准备就绪，即将开始
 
@@ -86,7 +88,7 @@
 
 ## 5. 平台组件接入
 
-### 5.2. 创建平台组件工程
+### 5.1. 创建平台组件工程
 
 工作目录： `packages/platform-widget-hub`。__未来在基础框架成熟后，将在单独的工程中开发平台组件。__
 
@@ -97,9 +99,7 @@
 3. `index.ts` 索引文件
 4. `其他.tsx` 可以编写任意的组件，交给 `spec.tsx` 使用
 
-### 5.3. package.json
-
-可以根据实际情况编写，可以使用三方库，自由度较高，以下我们以`单行输入框 FormInput`为例子：
+创建 `package.json`。可以根据实际情况编写，可以使用三方库，自由度较高，以下我们以`单行输入框 FormInput`为例子：
 
 ```json
 {
@@ -108,14 +108,13 @@
   "version": "0.0.1",
   "author": "xxx",
   "license": "MIT",
-  "dependencies": {
-  }
+  "dependencies": {}
 }
 ```
 
-### 5.4. spec.tsx
+### 5.2. 定义组件的元数据描述
 
-我们将基于装饰器（decorator）的方式来约束接入到平台的组件：
+创建 `spec.tsx`。我们将基于装饰器（decorator）的方式来约束接入到平台的组件：
 
 ```tsx
 import React from 'react';
@@ -124,6 +123,7 @@ import { FormInputComp } from './comp';
 
 @PlatformWidget({
   name: 'FormInput',
+  // 定义可被编辑的属性
   editableProps: {
     title: {
       type: "string"
@@ -155,9 +155,9 @@ export class FormInput implements PlatformWidgetComp {
 
 `@spec/platform-widget-access` 提供平台组件接入的规范，拥有基本约束、组件元数据声明等检查函数。
 
-### 5.5. comp.tsx
+### 5.3. 创建组件 (widget)
 
-这是约定的组件入口，编写真正的 react 组件
+创建 comp.tsx。这是约定的组件入口，编写 react 组件
 
 ```tsx
 /**
@@ -198,15 +198,11 @@ export const FormInputComp: React.FC<FormInputCompProps> = (props) => {
 };
 ```
 
-### 5.6. index.ts
-
-添加索引文件：
+添加索引文件 index.ts：
 
 ```ts
 export * from './spec.tsx'
 ```
-
-### 5.7. 其他
 
 可以根据实际情况，将 `comp.tsx` 中的组件切割为多个组件
 
@@ -225,9 +221,9 @@ export * from './spec.tsx'
 3. `index.ts` 索引文件
 4. `其他.tsx` 可以编写任意的组件，交给 `spec.tsx` 使用
 
-### 6.2. package.json
+### 6.2. 定义属性项元数据描述
 
-可以根据实际情况填写，可以ay依赖三方库，自由度较高，以下以`标题 Title`为例：
+创建 package.json。可以根据实际情况填写，可以ay依赖三方库，自由度较高，以下以`标题 Title`为例：
 
 ```json
 {
@@ -236,12 +232,13 @@ export * from './spec.tsx'
   "version": "0.0.1",
   "author": "xxx",
   "license": "MIT",
-  "dependencies": {
-  }
+  "dependencies": {}
 }
 ```
 
-### 6.3. spec.tsx
+### 6.3. 定义属性项元数据描述
+
+创建 spec.tsx。
 
 ```tsx
 import React, { useEffect } from 'react';
@@ -267,7 +264,9 @@ export class TitleHelperSpec {
 }
 ```
 
-### 6.4. comp.tsx
+### 6.4. 编写属性项编辑的业务逻辑
+
+创建 comp.tsx。
 
 ```tsx
 import React, { useEffect } from 'react';
@@ -310,9 +309,7 @@ export const TitleEditorComp: React.FC<PropItemRenderContext> = ({
 };
 ```
 
-### 6.5. index.ts
-
-索引文件
+创建索引文件 index.ts。
 
 ```tsx
 export * from './spec';
@@ -351,7 +348,7 @@ export const DropdownSelectorMeta = CreateWidgetPropItemRely({
 
 ---
 
-## 8. 将元数据注册到对外提供的服务接口
+## 8. 将平台组件和属性项注册到对外提供的服务接口
 
 工作目录： `packages/platform-widget-access-loader`。
 
@@ -560,7 +557,7 @@ import {
 // 具体用法参考 5～8 述章节
 ```
 
-在属性项的 `render` 函数中，平台提供了 `platformCtx` ，可以允许属性项调用平台的修改页面数据的能力：
+在属性项的 `render` 函数中，平台传入了 `PropItemRenderContext` ，提供属性项修改页面数据的能力：
 
 ```tsx
 @PropItem({
