--- a/docs/平台组件接入规则.md
+++ b/docs/平台组件接入规则.md
@@ -1,3 +1,5 @@
+[[toc]]
+
 # 平台组件接入规则
 
 ## 1. Changelog
@@ -10,8 +12,10 @@
 
 ## 2. 编写目的和范围
 
-1. 渐进式接入平台
-2. 了解平台的数据结构
+1. 平台组件的渐进式接入指南
+   1. 初级开发接入普通业务组件和属性项
+2. 了解页面设计器的内部数据结构
+   1. 页面设计器提供的修改数据的 API
 
 ---
 
@@ -78,9 +82,22 @@
    3. 编写属性项编辑的业务逻辑
 3. 建立平台组件 - 属性项的关联关系
 4. 将平台组件和属性项注册到对外提供的服务接口
-   1. 将平台组件分组信息注册到组件面板
-   2. 将属性项分组信息注册到属性项分组数据中
-   3. 将组件和属性依赖关系注册到 loader 获取服务中
+   <!-- 1. 将平台组件分组信息注册到组件面板 -->
+   1. 将属性项分组信息注册到属性项分组数据中
+   2. 将组件和属性依赖关系注册到 loader 获取服务中
+5. 检查是否接入成功
+   1. 启动必要服务
+      1. 在本地启动配置前端（[参考](../README.md)）
+      2. 在本地启动应用前端，参考同上
+      3. 在本地启动 platform-web-server，参考同上
+   2. 打开配置前端，如果没有其他，打开 [http://localhost:6679/](http://localhost:6679/)
+      1. 选择一个应用（如果没有现成应用，则需要创建应用。这里假设已经存在应用。）。
+      2. 编辑其中的一个页面（如果没有现成页面，则需要创建页面。这里假设已经存在页面。）。
+      3. 在左侧的「控件类型」面板查看是否存在接入的组件，如果有，则拖动进入中间的画布区域。
+      4. 点击右上方的「预览」按钮，查看应用端是否正常显示。
+   3. 如果上述步骤没有问题，则表示接入成功。否则，需要进一步排查错误。
+6. 接入异常排查
+   1. TODO
 
 > 准备就绪，即将开始
 
@@ -113,6 +130,8 @@
 ```
 
 ### 5.2. 定义组件的元数据描述
+
+参考：[packages/platform-widget-hub/FormInput/spec.tsx](../packages/platform-widget-hub/FormInput/spec.tsx)。__点击进入查看 ts 定义，有更详细的注释。__
 
 创建 `spec.tsx`。我们将基于装饰器（decorator）的方式来约束接入到平台的组件：
 
@@ -210,9 +229,11 @@ export * from './spec.tsx'
 
 ## 6. 属性项接入
 
+工作目录： `packages/platform-widget-prop-item-hub`。__未来在基础框架成熟后，将在单独的工程中开发属性项。__
+
 ### 6.1. 创建属性项工程
 
-工作目录： `packages/platform-widget-prop-item-hub`。__未来在基础框架成熟后，将在单独的工程中开发属性项。__
+参考：[packages/platform-widget-prop-item-hub/TitleHelper/spec.tsx](../packages/platform-widget-prop-item-hub/TitleHelper/spec.tsx)。__点击进入查看 ts 定义，有更详细的注释。__
 
 同样的，我们将属性项也当成一个完整的工程来看待，以下是属性项工程包含的文件：
 
@@ -321,12 +342,17 @@ export * from './spec';
 
 工作目录： `packages/platform-widget-access-prop-rely`。
 
+参考：[packages/platform-widget-access-prop-rely/rely-meta/FormInput-meta.ts](../packages/platform-widget-access-prop-rely/rely-meta/FormInput-meta.ts)
+
 ```tsx
 import { CreateWidgetPropItemRely } from "@platform-widget-access/spec";
 
 export const DropdownSelectorMeta = CreateWidgetPropItemRely({
   id: 'widget-id-5',
   label: '下拉选择器',
+
+  // 组件的分组信息
+  wGroupType: 'formController',
   widgetRef: 'DropdownSelector',
   propItemsRely: {
     propItemRefs: [
@@ -352,14 +378,14 @@ export const DropdownSelectorMeta = CreateWidgetPropItemRely({
 
 工作目录： `packages/platform-widget-access-loader`。
 
-分别在以下引用文件注册：
+分别在以下文件注册信息：
 
-- platform-widget-access-loader/refs-prop-item 属性项的引用注册的入口
-- platform-widget-access-loader/refs-widget 平台组件的引用注册的入口
+- [platform-widget-access-loader/refs-prop-item.ts](../packages/platform-widget-access-loader/refs-prop-item.ts) 属性项的引用注册
+- [platform-widget-access-loader/refs-widget.ts](../packages/platform-widget-access-loader/refs-widget.ts) 平台组件的引用注册
 
-### 8.1. 将平台组件分组信息注册到组件面板
+<!-- ### 8.1. 将平台组件分组信息注册到组件面板
 
-编辑 `packages/platform-widget-access-loader/services/widget-grouping.ts`
+编辑 [packages/platform-widget-access-loader/services/widget-grouping.ts](../packages/platform-widget-access-loader/services/widget-grouping.ts)
 
 ```ts
 export const widgetPanelData: GroupPanelData = {
@@ -394,9 +420,9 @@ export const widgetPanelData: GroupPanelData = {
     },
   ]
 };
-```
+``` -->
 
-### 8.2. 将属性项分组信息注册到属性项分组数据中
+### 8.1. 将属性项分组信息注册到属性项分组数据中
 
 编辑 `packages/platform-widget-access-loader/services/prop-grouping.ts`
 
@@ -471,7 +497,7 @@ export const propItemGroupingData: GroupPanelData[] = [
 ];
 ```
 
-### 8.3. 将组件和属性依赖关系注册到 loader 获取服务中
+### 8.2. 将组件和属性依赖关系注册到 loader 获取服务中
 
 编辑 `packages/platform-widget-access-loader/services/get-widget-rely-meta.ts`
 
