docs: 完善平台组件接入文档

--- a/docs/平台组件接入规则.md
+++ b/docs/平台组件接入规则.md
@@ -82,9 +82,9 @@
    3. 编写属性项编辑的业务逻辑
 3. 建立平台组件 - 属性项的关联关系
 4. 将平台组件和属性项注册到对外提供的服务接口
-   <!-- 1. 将平台组件分组信息注册到组件面板 -->
-   1. 将属性项分组信息注册到属性项分组数据中
-   2. 将组件和属性依赖关系注册到 loader 获取服务中
+   1. 将平台组件分组信息注册到组件面板
+   2. 将属性项分组信息注册到属性项分组数据中
+   3. 将组件和属性依赖关系注册到 loader 获取服务中
 5. 检查是否接入成功
    1. 启动必要服务
       1. 在本地启动配置前端（[参考](../README.md)）
@@ -350,9 +350,6 @@ import { CreateWidgetPropItemRely } from "@platform-widget-access/spec";
 export const DropdownSelectorMeta = CreateWidgetPropItemRely({
   id: 'widget-id-5',
   label: '下拉选择器',
-
-  // 组件的分组信息
-  wGroupType: 'formController',
   widgetRef: 'DropdownSelector',
   propItemsRely: {
     propItemRefs: [
@@ -383,7 +380,7 @@ export const DropdownSelectorMeta = CreateWidgetPropItemRely({
 - [platform-widget-access-loader/refs-prop-item.ts](../packages/platform-widget-access-loader/refs-prop-item.ts) 属性项的引用注册
 - [platform-widget-access-loader/refs-widget.ts](../packages/platform-widget-access-loader/refs-widget.ts) 平台组件的引用注册
 
-<!-- ### 8.1. 将平台组件分组信息注册到组件面板
+### 8.1. 将平台组件分组信息注册到组件面板
 
 编辑 [packages/platform-widget-access-loader/services/widget-grouping.ts](../packages/platform-widget-access-loader/services/widget-grouping.ts)
 
@@ -420,9 +417,9 @@ export const widgetPanelData: GroupPanelData = {
     },
   ]
 };
-``` -->
+```
 
-### 8.1. 将属性项分组信息注册到属性项分组数据中
+### 8.2. 将属性项分组信息注册到属性项分组数据中
 
 编辑 `packages/platform-widget-access-loader/services/prop-grouping.ts`
 
@@ -497,7 +494,7 @@ export const propItemGroupingData: GroupPanelData[] = [
 ];
 ```
 
-### 8.2. 将组件和属性依赖关系注册到 loader 获取服务中
+### 8.3. 将组件和属性依赖关系注册到 loader 获取服务中
 
 编辑 `packages/platform-widget-access-loader/services/get-widget-rely-meta.ts`
 
