docs: 完善接入文档

--- a/docs/平台组件接入规则.md
+++ b/docs/平台组件接入规则.md
@@ -68,9 +68,21 @@
 1. 提供一份描述页面布局、业务逻辑的数据结构
 2. 提供更改页面数据结构的 API
 
----
+### 4.4. 平台组件接入图解
 
-### 4.4. 平台组件 & 属性项的接入概览
+平台组件接入概览
+
+![img](assets/平台组件接入概览-总览.jpg)
+
+平台组件接入流程
+
+![img](assets/平台组件接入概览-平台组件接入.jpg)
+
+平台组件的运作机制
+
+![img](assets/平台组件接入概览-平台运行机制.jpg)
+
+### 4.5. 平台组件 & 属性项的接入概览
 
 1. 平台组件接入
    1. 创建平台组件工程
