--- a/docs/平台组件接入规则.md
+++ b/docs/平台组件接入规则.md
@@ -28,7 +28,9 @@
 
 ---
 
-## 4. 知识
+## 4. 知识库
+
+目前阶段需要将整个自定义 3.0 前端工程 clone 到本地。
 
 ### 4.1. 工程目录
 
@@ -42,7 +44,7 @@
   - `platform-widget-access-prop-rely` 平台组件与属性项的依赖关系，只在`配置端`使用，`应用端`不需要。
   - `platform-widget-custom-editor-hub` 自定义的平台组件的属性编辑器，当遇到难以扩展的属性项编辑时，预留扩展的。
 
-### 4.2. 平台的影响
+### 4.2. 平台对组件的影响
 
 由于平台组件运行在两个环境，分别是 `配置端` 和 `应用端`，开发组件时需要结合实际业务，根据由外部传入的`平台上下文（组件运行环境，配置端或者应用端）`进行渲染和交互。
 
@@ -52,7 +54,8 @@
 
 接入平台的组件将运行在平台之中，所以也将会收到平台的样式框架的影响，以下为样式框架的依赖：
 
-1. `tailwind.css` 最基本的样式框架，不依赖任何组件，作为平台基本的样式支持
+1. [`tailwind.css`](https://tailwindcss.com/docs/flex-direction) 最基本的样式框架，不依赖任何组件，作为平台基本的样式支持
+   1. TODO 样式命名规范
 2. `antd` 以后考虑替换方案替换该 UI 库
 3. `deer-ui` 以后考虑替换方案替换该 UI 库
 
@@ -74,7 +77,7 @@
 
 ![img](assets/平台组件接入概览-总览.jpg)
 
-平台组件接入流程
+平台组件接入流程，TODO 跟代码结合
 
 ![img](assets/平台组件接入概览-平台组件接入.jpg)
 
@@ -116,6 +119,8 @@
 ---
 
 ## 5. 平台组件接入
+
+组件无法修改页面数据，只负责纯粹渲染和用户交互。
 
 ### 5.1. 创建平台组件工程
 
@@ -186,6 +191,8 @@ export class FormInput implements PlatformWidgetComp {
 
 `@spec/platform-widget-access` 提供平台组件接入的规范，拥有基本约束、组件元数据声明等检查函数。
 
+TODO：详细编写每一个属性的含义
+
 ### 5.3. 创建组件 (widget)
 
 创建 comp.tsx。这是约定的组件入口，编写 react 组件
@@ -242,6 +249,8 @@ export * from './spec.tsx'
 ## 6. 属性项接入
 
 工作目录： `packages/platform-widget-prop-item-hub`。__未来在基础框架成熟后，将在单独的工程中开发属性项。__
+
+__属性项的最主要功能是修改页面数据__
 
 ### 6.1. 创建属性项工程
 
