--- a/website-doc/docs/access/平台组件接入/接入指南.md
+++ b/website-doc/docs/access/平台组件接入/接入指南.md
@@ -70,7 +70,7 @@ slug: /access_platform_widget
    2. 将组件和属性依赖关系注册到 loader 获取服务中
 5. 检查是否接入成功
    1. 启动必要服务
-      1. 在本地启动配置前端（[参考](../../index.md)）
+      1. 在本地启动配置前端（[参考](/docs/introduction)）
       2. 在本地启动应用前端，参考同上
       3. 在本地启动 platform-web-server，参考同上
    2. 打开配置前端，如果没有其他，打开 [http://localhost:6679/](http://localhost:6679/)
