docs: 完善组件接入文档

--- a/website-doc/docs/access/平台组件接入/接入指南.md
+++ b/website-doc/docs/access/平台组件接入/接入指南.md
@@ -16,6 +16,7 @@ slug: /access_platform_widget
 | 相杰 | 2020-11-16 | v1.0.0 | 初稿 |
 | 相杰 | 2020-11-29 | v1.1.0 | 1. 完善平台组件接入的描述<br />2. 添加对于页面数据的描述<br /> |
 | 相杰 | 2020-11-30 | v1.1.1 | 1. 完善文档描述 |
+| 相杰 | 2020-11-30 | v1.1.2 | 1. 添加 API 说明<br />2. 将文档切割 |
 
 ---
 
@@ -30,31 +31,39 @@ slug: /access_platform_widget
 
 | 术语 | 解释 |
 |---|---|
-| 平台组件 | 接入整个平台的组件，只需要接入一次，即可在配置端和应用端使用 |
-| 平台 | 指整个平台，从配置到应用的全生命周期 |
+| 平台 | 指整个平台，从配置到应用的全链路 |
+| 平台组件 | 接入平台的组件，包括`业务组件、属性项、组件-属性项依赖关系`，__只需要接入一次__，即可在配置端和应用端使用 |
+| 平台组件集合 | 包括`平台组件、属性项、组件-属性项依赖关系`，接入平台后可运行的最小单位 |
+| 属性项 | 只在接入配置工具，工作范围是修改选中的组件的属性，以及更改页面元数据 |
+| 平台组件-属性项的依赖关系 | 指平台组件在接入到配置端中，依赖了多少个属性项 |
+| 平台组件资源加载器 loader | 用于平台加载组件或属性项的加载器 |
 
 ---
 
-## 5. 工程目录
+## 5. 平台组件接入要素
+
+![img](./img/平台组件接入概览-平台组件接入要素.jpg)
+
+## 6. 工程目录
 
 目前阶段需要将整个自定义 3.0 前端工程 clone 到本地。
 
-### 5.1. 组件接入的工作目录
+### 6.1. 组件接入的工作目录
 
 - `packages/`
-  - `platform-widget-hub` 平台组件开发的工作区。`配置端` + `应用端` 同时使用。
-  - `platform-widget-prop-item-hub` 属性项开发的工作区，只有`配置端`使用，`应用端`不使用。
-  - `platform-widget-access-prop-rely` 平台组件与属性项的依赖关系，只有`配置端`使用，`应用端`不使用。
-  - `platform-widget-access-loader` 平台组件 `loader`，用于加载组件数据。`配置端` + `应用端` 同时使用。
+  - `platform-widget-hub` 平台组件开发的工作区。
+  - `platform-widget-prop-item-hub` 属性项开发的工作区，
+  - `platform-widget-access-prop-rely` 平台组件与属性项的依赖关系，
+  - `platform-widget-access-loader` 平台组件资源加载器，用于加载组件数据。
 
-### 5.2. 组件接入的扩展目录
+### 6.2. 组件接入的扩展目录
 
 - `packages/`
   - `platform-widget-custom-editor-hub` 自定义的平台组件的属性编辑器，当遇到难以扩展的属性项编辑时，预留扩展的。
 
 ---
 
-## 6. 平台组件 & 属性项的接入步骤概览
+## 7. 平台组件 & 属性项的接入步骤概览
 
 1. 平台组件接入
    1. 创建平台组件工程
@@ -66,7 +75,7 @@ slug: /access_platform_widget
    3. 编写属性项编辑的业务逻辑
 3. 建立平台组件 - 属性项的关联关系
 4. 将平台组件和属性项注册到对外提供的服务接口
-   1. 将属性项分组信息注册到属性项分组数据中
+   1. 在属性项分组信息中注册属性项引用
    2. 将组件和属性依赖关系注册到 loader 获取服务中
 5. 检查是否接入成功
    1. 启动必要服务
@@ -86,22 +95,26 @@ slug: /access_platform_widget
 
 ---
 
-## 7. 平台组件接入
+## 8. 平台组件接入
 
 组件无法修改页面数据，只负责纯粹渲染和用户交互。
 
-### 7.1. 创建平台组件工程
+### 8.1. 创建平台组件工程
 
 工作目录： `packages/platform-widget-hub`。__未来在基础框架成熟后，将在单独的工程中开发平台组件。__
 
-我们将平台组件当成一个完整的工程来看待，以下是平台组件工程包含的文件：
+我们将平台组件当成一个完整的工程来看待，以下是平台组件工程目录结构：
 
-1. `package.json` 描述平台组件工程的文件
-2. `spec.tsx` 接入规格，定义组件的元数据、可编辑属性等
-3. `index.ts` 索引文件
-4. `其他.tsx` 可以编写任意的组件，交给 `spec.tsx` 使用
+- `packages/platform-widget-hub`
+  - `{xxx组件目录名}` 名字根据实际的业务组件的功能来取
+    1. `package.json` 描述平台组件工程的文件
+    2. `spec.tsx` 接入规格，定义组件的元数据、可编辑属性等
+    3. `index.ts` 索引文件
+    4. `{其他}.tsx` 可以编写任意的组件，由 `spec.tsx` 调用
 
-创建 `package.json`。可以根据实际情况编写，可以使用三方库，自由度较高，以下我们以`单行输入框 FormInput`为例子：
+以下我们以 `单行输入框 FormInput` 为例子：
+
+`package.json`
 
 ```json
 {
@@ -114,15 +127,20 @@ slug: /access_platform_widget
 }
 ```
 
-### 7.2. 定义组件的元数据描述
+### 8.2. 定义组件的元数据描述
 
-参考：[packages/platform-widget-hub/FormInput/spec.tsx](https://10.0.4.55/custom-platform-v3-frontend-group/custom-platform-v3-frontend/tree/dev/packages/platform-widget-hub/FormInput/spec.tsx)。__点击进入查看 ts 定义，有更详细的注释。__
+参考：[packages/platform-widget-hub/FormInput/spec.tsx](https://10.0.4.55/custom-platform-v3-frontend-group/custom-platform-v3-frontend/tree/dev/packages/platform-widget-hub/FormInput/spec.tsx)。
 
-创建 `spec.tsx`。我们将基于装饰器（decorator）的方式来约束接入到平台的组件：
+我们将基于装饰器（decorator）的方式来定义并约束平台组件：
+
+`spec.tsx`
 
 ```tsx
 import React from 'react';
-import { PlatformWidget, PlatformWidgetComp, WidgetEntityState, WidgetActions } from '@platform-widget-access/spec';
+import {
+  PlatformWidget, PlatformWidgetComp,
+  WidgetEntityState, WidgetActions
+} from '@platform-widget-access/spec';
 import { FormInputComp } from './comp';
 
 @PlatformWidget({
@@ -151,26 +169,33 @@ export class FormInput implements PlatformWidgetComp {
 
   render(widgetState: WidgetEntityState, widgetActions: WidgetActions) {
     return (
-      <FormInputComp {...widgetState} />
+      <FormInputComp {...widgetState} {...widgetActions} />
     );
   }
 }
 ```
 
-`@spec/platform-widget-access` 提供平台组件接入的规范，拥有基本约束、组件元数据声明等检查函数。
+#### 8.2.1. API
 
-#### 7.2.1. API
+```ts
+import {
+  PlatformWidget, PlatformWidgetComp,
+  WidgetEntityState, WidgetActions
+} from '@platform-widget-access/spec';
+```
 
 | API | 说明 | 输入类型 | 默认值 |
 |--|--|--|--|
-| PlatformWidget | 构造平台组件的函数 | PlatformWidgetMeta | {} |
-| PlatformWidgetComp | 平台组件要实现的类，必须实现其中的 `render` 函数 |  | {} |
-| WidgetEntityState | 平台组件实例状态，`render` 的回调传入的第一个参数 |  | {} |
-| WidgetActions | 平台组件实例交互的 `action` ，`render` 的回调传入的第二个参数 |  | {} |
+| `PlatformWidget` | 构造平台组件的函数 | PlatformWidgetMeta | {} |
+| `PlatformWidgetComp` | 平台组件要实现的类，必须实现其中的 `render` 函数 |  | {} |
+| `WidgetEntityState` | 平台组件实例状态，`render` 的回调传入的第一个参数 |  | {} |
+| `WidgetActions` | 平台组件实例交互的 `action` ，`render` 的回调传入的第二个参数 |  | {} |
 
-### 7.3. 创建组件 (widget)
+### 8.3. 创建组件 (widget)
 
-创建 comp.tsx。这是约定的组件入口，编写 react 组件
+需要熟悉 `react` 的组件编写方，可以根据实际情况，将 `comp.tsx` 中的组件切割为多个组件：
+
+`comp.tsx`
 
 ```tsx
 /**
@@ -211,36 +236,43 @@ export const FormInputComp: React.FC<FormInputCompProps> = (props) => {
 };
 ```
 
-添加索引文件 index.ts：
+添加索引文件 `index.ts`：
 
 ```ts
 export * from './spec.tsx'
 ```
 
-可以根据实际情况，将 `comp.tsx` 中的组件切割为多个组件
-
 ---
 
-## 8. 属性项接入
+## 9. 属性项接入
 
-工作目录： `packages/platform-widget-prop-item-hub`。__未来在基础框架成熟后，将在单独的工程中开发属性项。__
+工作目录： `packages/platform-widget-prop-item-hub`。
 
-__属性项的最主要功能是修改页面数据__
+> 属性项的最主要功能是修改页面数据
 
-### 8.1. 创建属性项工程
+### 9.1. 编辑页面数据的能力范围
+
+1. 属性项只能编辑 __被选中的组件实例的状态__ 。
+2. 属性项可以编辑页面元数据（`pageMetadata`）
+
+### 9.2. 创建属性项工程
 
 参考：[packages/platform-widget-prop-item-hub/TitleHelper/spec.tsx](https://10.0.4.55/custom-platform-v3-frontend-group/custom-platform-v3-frontend/tree/dev/packages/platform-widget-prop-item-hub/TitleHelper/spec.tsx)。__点击进入查看 ts 定义，有更详细的注释。__
 
 同样的，我们将属性项也当成一个完整的工程来看待，以下是属性项工程包含的文件：
 
-1. `package.json` 描述平台组件工程的文件
-2. `spec.tsx` 接入规格，定义组件的元数据、可编辑属性等
-3. `index.ts` 索引文件
-4. `其他.tsx` 可以编写任意的组件，交给 `spec.tsx` 使用
+- `packages/platform-widget-prop-item-hub`
+  - `{yyy属性项目录名}` 名字根据实际的属性项的功能来取
+    1. `package.json` 描述属性项工程的文件
+    2. `spec.tsx` 接入规格，定义属性项的元数据、将要编辑的属性等
+    3. `index.ts` 索引文件
+    4. `{其他}.tsx` 可以编写任意的组件，由 `spec.tsx` 调用
 
-### 8.2. 定义属性项元数据描述
+### 9.3. 定义属性项元数据描述
 
-创建 package.json。可以根据实际情况填写，可以ay依赖三方库，自由度较高，以下以`标题 Title`为例：
+以下以`标题 Title`为例：
+
+`package.json`
 
 ```json
 {
@@ -253,9 +285,9 @@ __属性项的最主要功能是修改页面数据__
 }
 ```
 
-### 8.3. 定义属性项元数据描述
+### 9.4. 定义属性项元数据描述
 
-创建 spec.tsx。
+`spec.tsx`
 
 ```tsx
 import React, { useEffect } from 'react';
@@ -266,6 +298,7 @@ import { TitleEditorComp } from './comp';
   id: 'prop_title_value',
   title: 'PropTitle',
   label: '标题',
+  // 将要编辑的属性的 keys，将通过 PropItemRenderContext.editingWidgetState 传入
   whichAttr: ['title', 'field'],
   defaultValues: {
     title: '标题'
@@ -281,7 +314,7 @@ export class TitleHelperSpec {
 }
 ```
 
-#### 8.3.1. API
+#### 9.4.1. API
 
 | API | 说明 | 输入类型 | 默认值 |
 |--|--|--|--|
@@ -290,9 +323,9 @@ export class TitleHelperSpec {
 | PropItem.useMeta | 属性项能修改的页面元数据的范围，将在属性项 `render` 中传入 |  | {} |
 | PropItemRenderContext | 由配置端传入，用于修改页面数据、组件实例状态、调用页面设计器提供的 UI 能力 |  | {} |
 
-### 8.4. 编写属性项编辑的业务逻辑
+### 9.5. 编写属性项编辑的业务逻辑
 
-创建 comp.tsx。
+`comp.tsx`
 
 ```tsx
 import React, { useEffect } from 'react';
@@ -343,7 +376,7 @@ export * from './spec';
 
 ---
 
-## 9. 建立平台组件 - 属性项的关联关系
+## 10. 建立平台组件 - 属性项的关联关系
 
 工作目录： `packages/platform-widget-access-prop-rely`。
 
@@ -378,18 +411,29 @@ export const DropdownSelectorMeta = CreateWidgetPropItemRely({
 
 ---
 
-## 10. 将平台组件和属性项注册到对外提供的服务接口
+## 11. 将平台组件和属性项注册到对外提供的服务接口
 
 工作目录： `packages/platform-widget-access-loader`。
 
-分别在以下文件注册信息：
+### 11.1. 注册到组件 `loader`
 
-- [platform-widget-access-loader/refs-prop-item.ts](https://10.0.4.55/custom-platform-v3-frontend-group/custom-platform-v3-frontend/tree/dev/packages/platform-widget-access-loader/refs-prop-item.ts) 属性项的引用注册
-- [platform-widget-access-loader/refs-widget.ts](https://10.0.4.55/custom-platform-v3-frontend-group/custom-platform-v3-frontend/tree/dev/packages/platform-widget-access-loader/refs-widget.ts) 平台组件的引用注册
+`platform-widget-access-loader/refs-widget.ts`
 
-### 10.1. 将属性项分组信息注册到属性项分组数据中
+```ts
+export * from '@platform-widget-prop-item/{xxx组件目录名}';
+```
 
-编辑 `packages/platform-widget-access-loader/services/prop-grouping.ts`
+### 11.2. 注册到属性项 `loader`
+
+`platform-widget-access-loader/refs-prop-item.ts`
+
+```ts
+export * from '@platform-widget-prop-item/{yyy属性项目录名}';
+```
+
+### 11.3. 在属性项分组信息中注册属性项引用
+
+`packages/platform-widget-access-loader/services/prop-grouping.ts`
 
 ```ts
 export const propItemGroupingData: GroupPanelData[] = [
@@ -399,20 +443,6 @@ export const propItemGroupingData: GroupPanelData[] = [
       {
         title: '基本属性',
         items: [
-          'prop_widget_coding',
-          'prop_title_value',
-          'prop_field',
-          'prop_real_value',
-          'prop_action_config',
-          'prop_datasource_selector',
-          'prop_widget_type',
-          'prop_data_type',
-          'prop_string_length',
-          'prop_prompt_info',
-          'prop_note_info',
-          'prop_start_search',
-          'prop_dropdown_multiple',
-
         ]
       },
       {
@@ -423,17 +453,11 @@ export const propItemGroupingData: GroupPanelData[] = [
       {
         title: '数字属性',
         items: [
-          'prop_number_max',
-          'prop_number_min',
-          'prop_number_radixPoint'
         ]
       },
       {
         title: '控件校验',
         items: [
-          'prop_check_fixed_rule',
-          'prop_check_custom_rule',
-          'prop_check_error_tooltip'
         ]
       },
     ]
@@ -444,7 +468,6 @@ export const propItemGroupingData: GroupPanelData[] = [
       {
         title: '样式属性',
         items: [
-          'PropLabelColor',
         ]
       },
     ]
@@ -462,16 +485,14 @@ export const propItemGroupingData: GroupPanelData[] = [
 ];
 ```
 
-### 10.2. 将组件和属性依赖关系注册到 loader 获取服务中
+### 11.4. 将组件和属性依赖关系注册到 loader 获取服务中
 
 编辑 `packages/platform-widget-access-loader/services/get-widget-rely-meta.ts`
 
 ```ts
-import { WidgetTypeMetadataCollection } from "@engine/visual-editor/data-structure";
 import {
   Widget, // 从这里导入
 } from "@platform-widget-access/prop-item-rely";
-import { ApiMock } from "./api-mock";
 
 const tempArr = [
   Widget // 从这里导出
