docs: 完善平台组件注册方式

--- a/website-doc/docs/access/平台组件接入/接入指南.md
+++ b/website-doc/docs/access/平台组件接入/接入指南.md
@@ -53,12 +53,12 @@ slug: /access_platform_widget
 - `packages/`
   - `platform-widget-hub` 平台组件开发的工作区。
   - `platform-widget-prop-item-hub` 属性项开发的工作区，
-  - `platform-widget-access-prop-rely` 平台组件与属性项的依赖关系，
-  - `platform-widget-access-loader` 平台组件资源加载器，用于加载组件数据。
+  - `platform-widget-access-register` 注册平台组件集合信息。
 
 ### 6.2. 组件接入的扩展目录
 
 - `packages/`
+  - `platform-widget-access-loader` 平台组件资源加载器，用于加载组件数据。
   - `platform-widget-custom-editor-hub` 自定义的平台组件的属性编辑器，当遇到难以扩展的属性项编辑时，预留扩展的。
 
 ---
@@ -73,11 +73,14 @@ slug: /access_platform_widget
    1. 创建属性项工程
    2. 定义属性项元数据描述
    3. 编写属性项编辑的业务逻辑
-3. 建立平台组件 - 属性项的关联关系
-4. 将平台组件和属性项注册到对外提供的服务接口
-   1. 在属性项分组信息中注册属性项引用
-   2. 将组件和属性依赖关系注册到 loader 获取服务中
-5. 检查是否接入成功
+3. 向平台注册平台组件集合信息
+   1. 添加平台组件 - 属性项的关联关系数据
+   2. 注册平台组件信息
+   3. 注册属性项信息
+   4. 注册分组信息
+      1. 组件分组
+      2. 属性项分组
+4. 检查是否接入成功
    1. 启动必要服务
       1. 在本地启动配置前端（[参考](/docs/introduction)）
       2. 在本地启动应用前端，参考同上
@@ -88,7 +91,7 @@ slug: /access_platform_widget
       3. 在左侧的「控件类型」面板查看是否存在接入的组件，如果有，则拖动进入中间的画布区域。
       4. 点击右上方的「预览」按钮，查看应用端是否正常显示。
    3. 如果上述步骤没有问题，则表示接入成功。否则，需要进一步排查错误。
-6. 接入异常排查
+5. 接入异常排查
    1. TODO
 
 > 准备就绪，即将开始
@@ -375,11 +378,25 @@ export * from './spec';
 
 ---
 
-## 10. 建立平台组件 - 属性项的关联关系
+## 10. 向平台注册平台组件集合信息
 
-工作目录： `packages/platform-widget-access-prop-rely`。
+目录结构：
 
-参考：[packages/platform-widget-access-prop-rely/rely-meta/FormInput-meta.ts](https://10.0.4.55/custom-platform-v3-frontend-group/custom-platform-v3-frontend/tree/dev/packages/platform-widget-access-prop-rely/rely-meta/FormInput-meta.ts)
+- `packages/platform-widget-access-register/`
+  - `rely-meta/`
+    - `{组件名-meta}.ts`
+  - `grouping-data`
+    - `prop-items.ts` 属性项的分组信息
+    - `widget.ts` 平台组件分组信息
+  - `refs-prop-item.ts` 属性项注册信息
+  - `refs-widget.ts` 平台组件注册信息
+  - `refs-custom-editor.ts`自定义编辑器组件注册信息
+
+### 10.1. 添加平台组件 - 属性项的关联关系数据
+
+在 `packages/platform-widget-access-register/rely-meta` 文件中创建「平台组件 - 属性项的依赖关系数据」：
+
+参考：[packages/platform-widget-access-register/rely-meta/FormInput-meta.ts](https://10.0.4.55/custom-platform-v3-frontend-group/custom-platform-v3-frontend/tree/dev/packages/platform-widget-access-register/rely-meta/FormInput-meta.ts)
 
 ```tsx
 import { CreateWidgetPropItemRely } from "@platform-widget-access/spec";
@@ -402,37 +419,69 @@ export const DropdownSelectorMeta = CreateWidgetPropItemRely({
         },
       },
       { propID: 'prop_field' },
-      // { propID: 'prop_flex_config' },
     ]
   }
 });
 ```
 
----
+### 10.2. 注册平台组件信息
 
-## 11. 将平台组件和属性项注册到对外提供的服务接口
-
-工作目录： `packages/platform-widget-access-loader`。
-
-### 11.1. 注册到组件 `loader`
-
-`platform-widget-access-loader/refs-widget.ts`
+`platform-widget-access-register/refs-widget.ts`
 
 ```ts
 export * from '@platform-widget-prop-item/{xxx组件目录名}';
 ```
 
-### 11.2. 注册到属性项 `loader`
+### 10.3. 注册属性项信息
 
-`platform-widget-access-loader/refs-prop-item.ts`
+`platform-widget-access-register/refs-prop-item.ts`
 
 ```ts
 export * from '@platform-widget-prop-item/{yyy属性项目录名}';
 ```
 
-### 11.3. 在属性项分组信息中注册属性项引用
+### 10.4. 注册分组信息
 
-`packages/platform-widget-access-loader/services/prop-grouping.ts`
+#### 10.4.1. 组件分组
+
+`packages/platform-widget-access-register/grouping-data/widget.ts`
+
+```ts
+export const widgetPanelData: GroupPanelData = {
+  title: '控件类型',
+  type: 'dragableItems',
+  itemsGroups: [
+    {
+      title: '通用',
+      type: '',
+      items: [
+      ]
+    },
+    {
+      title: '表单控件',
+      type: '',
+      items: [
+      ]
+    },
+    {
+      title: '表格控件',
+      type: '',
+      items: [
+      ]
+    },
+    {
+      title: '布局控件',
+      type: '',
+      items: [
+      ]
+    },
+  ]
+};
+```
+
+#### 10.4.2. 属性项分组
+
+`packages/platform-widget-access-register/grouping-data/prop-items.ts`
 
 ```ts
 export const propItemGroupingData: GroupPanelData[] = [
@@ -481,19 +530,5 @@ export const propItemGroupingData: GroupPanelData[] = [
       },
     ]
   },
-];
-```
-
-### 11.4. 将组件和属性依赖关系注册到 loader 获取服务中
-
-编辑 `packages/platform-widget-access-loader/services/get-widget-rely-meta.ts`
-
-```ts
-import {
-  Widget, // 从这里导入
-} from "@platform-widget-access/prop-item-rely";
-
-const tempArr = [
-  Widget // 从这里导出
 ];
 ```
