docs: 修改必备知识文档

--- a/_website-doc/docs/必备知识.md
+++ b/_website-doc/docs/必备知识.md
@@ -1,9 +1,10 @@
 ---
-title: 自定义平台 3.0 前端必备知识
+title: 自定义工具 3.0 前端必备知识
+
 slug: /knowledge
 ---
 
-前端变化很快，但是有些却是在软件开发中已有的套路，以下从工程、基础框架、计算机基础、业务应用知识来介绍自定义工具 3.0 前端工程所需要具备的知识。
+前端变化很快，但是有些却是在软件开发中已有的套路，以下从`工程`、`基础框架`、`计算机基础`、`业务应用知识`来介绍自定义工具 3.0 前端工程所需要具备的知识。
 
 ## 1. 工程
 
@@ -45,6 +46,12 @@ slug: /knowledge
 - 调试
     - yapi
     - postman
+    - swagger
+- docker
+    - docker 基本概念
+    - docker image
+    - docker container
+- k8s 可以了解应用场景
 
 ## 2. 基础框架
 
